在多余一次。

--- a/fling.html
+++ b/fling.html
@@ -32,6 +32,16 @@
 				<p>Tips: Use the Undo/R when you get stuck</p>
 				<p><a id="playBtn2" class="button" href="">Start Now</a></p>
 			</div>
+
+			<div id="intro">
+				<h2 style="text-align: center">How to play?</h2>
+				<br>
+				<p>use your mouse to select a ball</p>
+				<p>W/↑ - Move selector up</p>
+				<p>S/↓ - Move selector down</p>
+				<p>A/← - Move selector left</p>
+				<p>D/→ - Move selector right</p>
+			</div>
 			
 			<div id="gameComplete">
 				<div id="gameEndShow">
